# JskWorkClock

./: JskWorkClock.wpr  README.md  pyproject.toml  requirements.txt
jskworkclock/: __init__.py  main.py
jskworkclock/libs/: base.py  database.py  heper.py  ico.py  keys.py  notes.py  report.py  report_translations.py  system.py
