[tool.poetry]
name = "jskworkclock"
version = "0.1.0"
description = ""
authors = ["Jacek Kotlarski <szumak@virthost.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
jsktoolbox = "^1.0.13"
pystray = "^0.19.5"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
