[tool.poetry]
name = "jskworkclock"
version = "1.0.1"
description = ""
authors = ["Jacek Kotlarski <szumak@virthost.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "2.0.36"
jsktoolbox = "1.0.22"
pystray = "^0.19.5"
tkcalendar = "^1.6.1"
babel = "^2.14.0"
l10n = "^0.1.5"
polib = "^1.2.0"
mypy = "^1.8.0"


[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
